force-app/main/default/objects/AssociatedLicense__c/fields/TerminationReasonFormula__c.field-meta.xml
<CustomField>
    <fullName>TerminationReasonFormula__c</fullName>
    <formula>IF(

LEN(LEFT( TEXT(TerminationReason__c) , FIND(&quot;(&quot;, TEXT(TerminationReason__c))-1)) = 0, 

RIGHT(TEXT(TerminationReason__c) ,LEN(TEXT(TerminationReason__c))-Find(&quot;-&quot;, TEXT(TerminationReason__c) )-1), 

LEFT((RIGHT(TEXT(TerminationReason__c) ,LEN(TEXT(TerminationReason__c))-Find(&quot;-&quot;, TEXT(TerminationReason__c) )-1)) , FIND(&quot;(&quot;,(RIGHT(TEXT(TerminationReason__c) ,LEN(TEXT(TerminationReason__c))-Find(&quot;-&quot;, TEXT(TerminationReason__c) )-1)))-1)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Termination Reason Formula</label>
    <type>Text</type>
</CustomField>