force-app/main/default/objects/AssociatedLicense__c/fields/ThisLicenseRenewed__c.field-meta.xml
<CustomField>
    <fullName>ThisLicenseRenewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>This License Renewed</label>
    <type>Checkbox</type>
</CustomField>