force-app/main/default/objects/AssociatedLicense__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>PacPoint-KN081619 - Created for PVL Phase 1</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RME</fullName>
            </value>
            <value>
                <fullName>Broker In Charge</fullName>
            </value>
            <value>
                <fullName>Mechanic In Charge</fullName>
            </value>
            <value>
                <fullName>Barber Operator-In-Charge</fullName>
            </value>
            <value>
                <fullName>Beauty Operator-In-Charge</fullName>
            </value>
            <value>
                <fullName>Principal RME</fullName>
            </value>
            <value>
                <fullName>Pharmacist-in-Charge</fullName>
            </value>
            <value>
                <fullName>Principal Massage Therapist</fullName>
            </value>
            <value>
                <fullName>Principal Agent</fullName>
            </value>
            <value>
                <fullName>Principal Detective</fullName>
            </value>
            <value>
                <fullName>Principal Guard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>