force-app/main/default/objects/AssociatedLicense__c/validationRules/Require_End_Date_on_Status_Terminated.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_End_Date_on_Status_Terminated</fullName>
    <active>true</active>
    <description>PacPoint-FT031420 - Created for PVL phase 1</description>
    <errorConditionFormula>ISPICKVAL(EmploymentStatus__c, &quot;Terminated&quot;) &amp;&amp;
ISBLANK(EndDate__c)</errorConditionFormula>
    <errorMessage>Please enter an End Date indicating when the employment ended.</errorMessage>
</ValidationRule>